// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex Local Media Media Disabled 1`] = `
Array [
  <div
    className="wxc-local-media wxc-local-media-no-media"
  >
    <div
      className="md-avatar md-avatar--medium"
      title="Barbara German"
    >
      <span
        className="md-avatar__letter"
        style={
          Object {
            "backgroundColor": "",
            "color": "",
          }
        }
      >
        BG
      </span>
      <img
        alt="Barbara German"
        className="md-avatar__img md-avatar__img--hidden"
        draggable={false}
        onError={[Function]}
        onLoad={[Function]}
        src="./images/barbara.png"
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Local Media Media Enabled 1`] = `
Array [
  <div
    className="wxc-local-media"
  >
    <video
      autoPlay={true}
      playsInline={true}
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
